<resources>
    <string name="app_name">My Drama</string>
    <string name="message">%1$s DiKlik!</string>
    <string name="negara">Negara</string>
    <string name="genre">Genre</string>
    <string name="cari">TAMPILKAN</string>
    <string name="forecashing_love_and_weather">Forecashing Love And Weather</string>
    <string name="comedy_romantis">Comedy, romantis</string>
    <string name="korea">Korea</string>
    <string name="todo">TODO</string>
    <string name="negara_invalid">Negara harus diisi</string>
    <string name="genre_invalid">Genre harus diisi</string>

</resources>